[package]
name = "crash-recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crash-context = "0.6.1"
crash-handler = "0.6.0"
thiserror = "1.0.40"
cfg-if = "1.0"
tokio = { version = "1.28.2", features = ["time", "rt", "rt-multi-thread", "net", "io-util"] }

# temporary use until we can make tokio's named_pipe module work
[target.'cfg(windows)'.dependencies]
interprocess = { git = "https://github.com/kotauskas/interprocess", features = ["tokio"] }
futures = "0.3"

[[examples]]
name = "simple"
crate-type = ["bin"]
